refactor: 유저/인증 부분 컨벤션 통일